--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,20 @@
     android:layout_height="match_parent"
     tools:context="com.truiton.mobile.vision.ocr.MainActivity">
 
+
+    <Button
+        android:text="Compare Receipt"
+        android:textSize="10dp"
+        android:layout_height="50dp"
+        android:layout_width="88dp"
+        android:onClick="compareActivity"
+        app:layout_constraintRight_toLeftOf="@+id/imageView"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        android:layout_marginEnd="4dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginRight="4dp" />
+
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="200dp"
@@ -26,7 +40,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:text="Scan Text"
+        android:text="Scan Receipt"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -34,23 +48,23 @@
         tools:layout_constraintRight_creator="1"
         />
 
-
     <Button
-        android:id="@+id/compareButton"
-        android:text="Compare Receipt"
-        android:textSize="10dp"
+        android:id="@+id/upload"
+        android:layout_width="0dp"
         android:layout_height="50dp"
-        android:layout_width="80dp"
-        android:layout_marginTop="50dp"
-        android:onClick="compareActivity" />
+        android:textSize="10dp"
+        android:text="Upload Receipt"
 
-    <!--<Button-->
-        <!--android:text="Compare Receipt"-->
-        <!--android:textSize="10dp"-->
-        <!--android:layout_height="50dp"-->
-        <!--android:layout_width="80dp"-->
-        <!--android:layout_marginTop="100dp"-->
-        <!--android:onClick="compareActivity" />-->
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="-7dp"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/imageView"
+        app:layout_constraintHorizontal_bias="0.0" />
+
+
 
 
 
